# pattern-3

./: .travis.yml  1.rs  Cargo.toml
benches/: slice_fn.rs  strings.rs
examples/: a.rs  ap.rs
src/: cursor.rs  ext.rs  haystack.rs  iterators.rs  lib.rs  macros.rs  memchr_ptr.rs  needle.rs  pattern.rs  slices.rs  span.rs  strings.rs  traits.rs
src/omgwtf8/: mod.rs  wtf8.rs  wtf8_pat.rs
src/slices/: func.rs  mod.rs  slice.rs
src/strings/: char.rs  func.rs  mod.rs  str.rs
tests/: linked_list.rs  partial_eq_slice.rs  regex.rs  slice_fn.rs  string_char.rs  strings.rs  trim.rs  wtf8.rs
