[package]
name = "pattern-3"
version = "0.1.0"
authors = ["kennytm <kennytm@gmail.com>"]

[dependencies]
memchr = "2.0"
libc = "0.2"

[features]
default = ["std"]
std = []

[dev-dependencies]
regex = "1.0"

[profile.release]
panic = "abort"

[profile.bench]
opt-level = 2 # to be fair to libstd which is compiled with -O2 too.
debug = 2 # for running instruments