[package]
name = "pattern-3"
version = "0.5.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Needle API (née Pattern API 3.0), generalization of `std::str::pattern`"
repository = "https://github.com/kennytm/pattern-3"
license = "MIT"

[badges]
travis-ci = { repository = "kennytm/pattern-3" }
maintenance = { status = "experimental" }

[dependencies]
memchr = "2.0"
libc = "0.2"

[features]
default = ["std"]
std = []

[dev-dependencies]
regex = "1.0"

[profile.release]
panic = "abort"

[profile.bench]
opt-level = 2 # to be fair to libstd which is compiled with -O2 too.
debug = 2 # for running instruments
